applications/overlays/hcloud/minio/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio-console-ingress
  namespace: data
  annotations:
    'external-dns.alpha.kubernetes.io/hostname': 'minio-console.macro.network'
    'external-dns.alpha.kubernetes.io/cloudflare-proxied': 'true'
    'traefik.ingress.kubernetes.io/router.entrypoints': 'websecure'
spec:
  tls:
    - hosts:
        - minio-console.macro.network
  rules:
    - host: minio-console.macro.network
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: minio-console
                port:
                  number: 9001
